deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: notification-service-app
  labels:
    app: notification-service
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: morgan
  template:
    metadata:
      labels:
        app: morgan
    spec:
      serviceAccountName: notification-service-app-service-account
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: notification-service
              topologyKey: "kubernetes.io/hostname"
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: notification-service
      containers:
        - name: notification-service
          image: public.ecr.aws/i3m8z0o9/morgan/queues-repo:AWSProject_Frontend
          imagePullPolicy: Always
          ports:
          - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
